Resolve overflow x and short thumbs container issues on ProjectDetails.module.scss

--- a/components/ProjectDetails/ProjectDetails.module.scss
+++ b/components/ProjectDetails/ProjectDetails.module.scss
@@ -64,6 +64,7 @@
     max-height: 65vh;
 
     @include m.mobile {
+      width: 100%;
       height: 248px;
     }
 
@@ -78,12 +79,12 @@
     grid-auto-flow: column;
     justify-content: flex-start;
     gap: 0.5rem;
-    max-width: 43.75rem;
     height: 100px;
     overflow-x: auto;
 
     @include m.desktop {
       height: 150px;
+      max-width: 43.75rem;
     }
   }
 
